--- a/backend/apitrevodasortedigital/pom.xml
+++ b/backend/apitrevodasortedigital/pom.xml
@@ -11,6 +11,7 @@
     <version>0.0.1-SNAPSHOT</version>
     <name>apitrevodasortedigital</name>
     <description>API Trevo da Sorte Digital</description>
+    <packaging>war</packaging>
     <properties>
         <java.version>17</java.version>
     </properties>
@@ -53,6 +54,11 @@
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.33</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-tomcat</artifactId>
+            <scope>provided</scope>
         </dependency>
     </dependencies>
     <build>
